src/test/deca/syntax/valid/not_provided/main_vide.deca
// Description:
//    Programme vide.
//
// Resultats:
//    Aucun.
//
// Historique:
//    cree le 05/01/2022