src/test/deca/syntax/invalid/multiple_block.deca
// Description:
//    Un block dans un block.
//
// Resultats:
// Ligne 11: erreur de parseur:
// un bloc ne dérive pas vers un bloc.
//
// Historique:
//    cree le 05/01/2022

{
 {}
}